<resources>
    <string name="app_name">simpecalculator</string>
    <string name="simple_calculator">Simple Calculator</string>
    <string name="number">Number</string>
    <string name="nol">0.0</string>
    <string name="hasil">Hasil :</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiple">x</string>
    <string name="divide">/</string>
</resources>
