<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/sixteen_dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sixteen_dp"
        android:layout_gravity="center"
        android:text="@string/simple_calculator"
        android:textSize="26sp"
        android:textColor="#000"
        android:textStyle="bold"/>

    <!--Input 1-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/eight_dp"
        android:weightSum="4">
        <EditText
            android:id="@+id/et_number1"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:inputType="number"
            android:hint="@string/number"/>
        <CheckBox
            android:id="@+id/cb_check1"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:checked="false"
            android:layout_weight="0.5"/>
    </LinearLayout>

    <!--Input 2-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/eight_dp"
        android:weightSum="4">
        <EditText
            android:id="@+id/et_number2"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:inputType="number"
            android:hint="@string/number"/>
        <CheckBox
            android:id="@+id/cb_check2"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:checked="false"
            android:layout_weight="0.5"/>
    </LinearLayout>

    <!--Input 3-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/eight_dp"
        android:weightSum="4">
        <EditText
            android:id="@+id/et_number3"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:inputType="number"
            android:hint="@string/number"/>
        <CheckBox
            android:id="@+id/cb_check3"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:checked="false"
            android:layout_weight="0.5"/>
    </LinearLayout>

    <!--Action buttons-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eight_dp"
        android:weightSum="4">
        <Button
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:layout_margin="@dimen/two_dp"
            android:text="@string/add"/>
        <Button
            android:id="@+id/btn_subtract"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:layout_margin="@dimen/two_dp"
            android:text="@string/subtract"/>
        <Button
            android:id="@+id/btn_multiple"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:layout_margin="@dimen/two_dp"
            android:text="@string/multiple"/>
        <Button
            android:id="@+id/btn_divide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:layout_margin="@dimen/two_dp"
            android:text="@string/divide"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/two_dp"
        android:layout_marginBottom="@dimen/eight_dp"
        android:background="#000"/>

    <!--Result-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/hasil"
            android:textSize="22sp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/nol"
            android:textSize="22sp"
            android:layout_weight="1"
            android:textAlignment="textEnd"/>
    </LinearLayout>

</LinearLayout>